--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "aos": "^2.3.4",
-    "firebase": "^10.12.5"
+    "firebase": "^10.12.5",
+    "sweetalert": "^2.1.2"
   }
 }
